<resources>
    <string name="app_name">Contacts List</string>
    <string name="action_settings">Settings</string>
    <string name="name_text_view">Name</string>
    <string name="name_edit_text">Your Name</string>
    <string name="your_phone_edit_text">Your Phone</string>
    <string name="phone_text_view">Phone</string>
    <string name="email_text_view">Email</string>
    <string name="email_edit_text">Your Email</string>
    <string name="city_edit_text">Your City</string>
    <string name="city_text_view">City</string>
    <string name="create_button">Create</string>
    <string name="clean_button">Clean</string>
    <string name="see_contacts_button">See Contacts</string>
    <string name="all_clean_toast">All clean!</string>
    <string name="ask_write_storage_permission">We need to save the contacts on your External Storage!</string>
    <string name="contact_is_empty">Please, fill all data to proceed.</string>
    <string name="generic_error_response">An error occurred!</string>
    <string name="create_contact">Create Contact</string>
</resources>
