<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_contact"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.wanis.tp1androiddevelopment.CreateContactActivity">

    <TextView
        android:text="@string/name_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/nameTextView"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textCapWords"
        android:hint="@string/name_edit_text"
        android:ems="10"
        android:id="@+id/nameEditText"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameTextView" />

    <TextView
        android:text="@string/phone_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/phoneTextView"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/nameEditText"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:hint="@string/your_phone_edit_text"
        android:ems="10"
        android:id="@+id/phoneEditText"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneTextView" />

    <TextView
        android:text="@string/email_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/emailTextView"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/phoneEditText"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/email_edit_text"
        android:ems="10"
        android:id="@+id/emailEditText"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailTextView" />

    <TextView
        android:text="@string/city_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/cityTextView"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textCapWords"
        android:hint="@string/city_edit_text"
        android:ems="10"
        android:id="@+id/cityEditText"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cityTextView" />

    <Button
        android:text="Create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/createButton"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        style="@style/Widget.AppCompat.Button.Colored.Create"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp" />

    <Button
        android:text="Clean"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cleanButton"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        style="@style/Widget.AppCompat.Button.Colored" />

    <Button
        android:text="See Contacts"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/seeContactsButton"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        app:layout_constraintRight_toLeftOf="@+id/createButton"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/cleanButton" />

</android.support.constraint.ConstraintLayout>
